# vscode

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yaml  ci.yaml
language/: syntaxes.json
sample/: a.am  test.am  test.fan
sample/test/: test.fan
sample/test/folder/: folder.fan
sample/work/: work.fan
src/: extension.ts  lib.rs  lib.ts  worker.ts
syntaxes/: am.tmLanguage.json  language.json
wit/: lib.wit
