[package]
name = "lib-nodejs"
version = "0.0.1"
description = "basjoofan library for nodejs"
repository = "https://github.com/basjoofan/vscode"
license = "MIT OR Apache-2.0"
authors = ["Lamb <lamb@basjoofan.com>"]
keywords = ["continuous", "test", "http"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
lib = { path = "../core/lib", features = ["wasm"]  }
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
