[package]
name = "lib-vscode"
version = "0.1.0"
description = "basjoofan library for vscode"
repository = "https://github.com/basjoofan/vscode"
license = "MIT OR Apache-2.0"
authors = ["Lamb <lamb@basjoofan.com>"]
keywords = ["continuous", "test", "http"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib = { git = "https://github.com/basjoofan/core", tag = "v0.1.0", features = ["wasm"]  }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
